Finished /about, fixed sidebar overlap

--- a/optiroute/src/Components/Sidebar/Sidebar.css
+++ b/optiroute/src/Components/Sidebar/Sidebar.css
@@ -1,14 +1,31 @@
 .sidebar {
-    position: fixed;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 200px;
+    width: 20vw;
+    max-width: 250px;
+    padding: 1rem;
     background-color: #3E5346;
     display: flex;
     flex-direction: column;
     gap: 20px;
-    padding: 20px;
+    flex: 1;
+    /* position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 200px;
+    padding: 1rem;
+    background-color: #3E5346;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    flex: 1; */
+}
+
+@media (max-width: 800px) {
+    .sidebar {
+        width: 40vw;
+        padding: 0.5rem;  /* Adjust padding for smaller screens */
+        /* Add other adjustments as necessary */
+    }
 }
 
 .sidebar a {
